--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -26,7 +26,7 @@
   <div class="dashboard-fields">
 
     <section>
-      <h1 class="welpcome">
+      <h1 class="welcome">
         welcome, <%= "#{current_user.profile.title} #{current_user.profile.last_name}" %>!
         <%= image_tag("pencil-icon.png", size: "25x25",alt: "pencil icon", class: "pencil-icon", id: "pencil-name") %>
       </h1>
