--- a/app/assets/stylesheets/sign_up.scss
+++ b/app/assets/stylesheets/sign_up.scss
@@ -1,34 +1,47 @@
 .sign-up {
 
-  margin-top: -2em;
+  margin-top: 5em;
   margin-left: 5em;
 
   div {
     display: inline-block;
   }
 
-  h2, a {
+  h2 {
     color: $primary-blue;
+    margin-bottom: 1em;
   }
 
   .field {
     margin: 0.5em;
     width: 25em;
     &.smaller-field {
-      width: 5em;
+      width: 8em;
     }
     input:not([type='checkbox']), select {
       border-radius: 0.75em;
-      color: $warm-gray;
-      &:focus {
-        color: $primary-blue
-      }
+      color: #333;
     }
+      ::-webkit-input-placeholder {
+        color: $warm-gray;
+      }
+
+      :-moz-placeholder { /* Firefox 18- */
+        color: $warm-gray;  
+      }
+
+      ::-moz-placeholder {  /* Firefox 19+ */
+        color: $warm-gray;  
+      }
+
+      :-ms-input-placeholder {  
+        color: $warm-gray;  
+      }
   }
 
   select {
-    &:invalid, &:valid { color: #ccc; }
-    width: 6em;
+    &:valid { color: #333; }
+    width: 8em;
     height: 2.4em;
     appearance: none;
     border: 1px solid $accent-gray;
@@ -43,7 +56,7 @@
       border-color: $primary-blue;
       &:-moz-focusring {
         color: transparent;
-        text-shadow: 0 0 0 $primary-blue;
+        text-shadow: 0 0 0 #333;
       }
     }
   }
@@ -53,6 +66,11 @@
     .btn {
       background-color: $primary-green;
     }
+  }
+
+  #error_explanation {
+    color: red;
+    display: block;
   }
 
 }
