changed 'dashboard' to 'artroom' & fixed favorites

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -32,6 +32,6 @@
 @import 'subscribe';
 @import 'donate';
 @import 'about';
-@import 'dashboard';
+@import 'artroom';
 @import 'sign_up';
 @import 'sign_in';
