--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -3,7 +3,7 @@
     <div class="row nav-menu">
       <div class="col-md-2 col-xs-3">
         <% if current_user %>
-          <a href="/dashboard">dashboard</a>
+          <a href="/artroom">artroom</a>
         <% else %>
           <a href="/users/sign_up">sign up</a>
         <% end %>
