--- a/app/assets/stylesheets/artroom.scss
+++ b/app/assets/stylesheets/artroom.scss
@@ -1,4 +1,4 @@
-.dashboard {
+.artroom {
 
   width: 100%;
 
@@ -21,7 +21,7 @@
     }
   }
 
-  .dashboard-fields {
+  .artroom-fields {
     width: 70%;
     margin: 0 auto;
   }
@@ -135,4 +135,17 @@
     margin: 5px 0 0 0;
   }
 
+  div.favorite-in-artroom {
+    display:inline-block;
+    margin-left:10px;
+  }
+
+}
+
+.hero-page-title {
+  p {
+    transform: rotate(-40deg);
+    margin: -1em 0 0 8em;
+    color: $primary-green;
+  }
 }
