added modal to artroom re feature is in beta

--- a/app/views/users/artroom.html.erb
+++ b/app/views/users/artroom.html.erb
@@ -180,3 +180,15 @@
   </div>
 
 </div>
+
+    <div class="modal" id="artroomModal">
+    <div class="modal-content">
+      <div class="modal-close"></div>
+      <div class="modal-title">
+        <h2>Welcome to the artroom!</h2>
+      </div>
+      <div class="modal-body">The artroom is currently in beta with new features are being released regularly. 
+      We welcome your feedback on current features and suggestions for those you would like to see!</div>
+    </div>
+  </div>
+
