--- a/app/views/shared/_hero.html.erb
+++ b/app/views/shared/_hero.html.erb
@@ -29,7 +29,7 @@
   <div class="hero-page-title">
     <%= yield :page_title %>
     <% if content_for? :page_beta %>
-      <p><%=yield :page_beta %></p>
+      <span><%=yield :page_beta %></span>
     <% end %>
   </div>
   <% end %>
