changed style of 'beta' & text in modal

--- a/app/views/users/artroom.html.erb
+++ b/app/views/users/artroom.html.erb
@@ -185,10 +185,13 @@
     <div class="modal-content">
       <div class="modal-close"></div>
       <div class="modal-title">
-        <h2>Welcome to the artroom!</h2>
+        <h2>Welcome to the artroom!  <span>beta</span></h2>
       </div>
-      <div class="modal-body">The artroom is currently in beta with new features are being released regularly. 
-      We welcome your feedback on current features and suggestions for those you would like to see!</div>
+      <div class="modal-body">
+      <p>New features are being released regularly. 
+      We welcome your feedback on current features and suggestions for those you would like to see!</p>
+      <p>Drop us a line at: <a href="mailto:info@doodles-academy.org" target="_top">info@doodles-academy.org</a></p>
+      </div>
     </div>
   </div>
 
