artroom modal will only show on first visit

--- a/app/views/users/artroom.html.erb
+++ b/app/views/users/artroom.html.erb
@@ -37,6 +37,7 @@
         <% end %>
         <%= image_tag("pencil-icon.png", size: "25x25",alt: "pencil icon", class: "pencil-icon", id: "pencil-name") %>
       </h1>
+      <span id="visits" class="<%= @visits %>" hidden></span>
     </section>
 
     <section id="edit-name" class="edit-user-data" hidden>
