different text on feedback for artroom & lessons

--- a/app/views/shared/_feedback.html.erb
+++ b/app/views/shared/_feedback.html.erb
@@ -7,9 +7,12 @@
           <input type="radio" NAME="was lesson clear?" VALUE="y">Yes</input>
           <input type="radio" NAME="was lesson clear?" VALUE="n">No</input>
         </div>
+        <div class="field">
+         <h3>We welcome feedback and suggestions for new features!</h3>
+      <% else %>
+        <div class="field">
+        <h3>We welcome feedback!</h3>
       <% end %>
-      <div class="field">
-        <h3>We welcome feedback and suggestions for new features!</h3>
         <textarea rows="4" name="feedback" placeholder="Your input here..."></textarea>
       </div>
       <div class="actions">
