--- a/app/views/shared/_feedback.html.erb
+++ b/app/views/shared/_feedback.html.erb
@@ -4,8 +4,8 @@
       <% if controller_name == 'lessons' %>
         <div>
           <h3>was this lesson clear?</h3>
-          <input type="radio" NAME="was lesson clear?" VALUE="y">Yes</input>
-          <input type="radio" NAME="was lesson clear?" VALUE="n">No</input>
+          <input type="radio" NAME="was lesson clear?" VALUE="y" />Yes
+          <input type="radio" NAME="was lesson clear?" VALUE="n" />No
         </div>
         <div class="field">
          <h3>We welcome feedback!</h3>
@@ -16,7 +16,7 @@
         <textarea rows="4" name="feedback" placeholder="Your input here..."></textarea>
       </div>
       <div class="actions">
-        <input type="submit" value="submit"></input>
+        <input type="submit" value="submit" />
       </div>
     </form>
   </section>
