--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -17,12 +17,17 @@
   <div class="project-grid">
     <% @units.order(:order).each do |unit| %>
       <div><h2><%= unit.full_title %></h2></div>
+      <% @unit_id = unit.id %>
+      <% @unit_title = unit.title %>
       <% unit.project_sets.published.each do |set| %>
       <div class="project-grid-item" data-project-slug="<%= set.slug %>">
         <div class="project-grid-item-image" style="background-image: url(
           <%= set.project_image.url(:medium) %>)">
         </div>
         <div class="project-grid-item-title"><%= set.title %></div>
+        <% @project_title = set.title %>
+        <% @synopsis = Project.find_by_project_set_id(set.id).synopsis %>
+        <% @featured_artist_image = Project.find_by_project_set_id(set.id).featured_artist_image %>
       </div>
       <% end %>
     <% end %>
@@ -37,10 +42,18 @@
   <div class="modal" id="academy-select">
     <div class="modal-content">
       <div class="modal-close"></div>
-      <div class="modal-title">
-        <h2>Please choose an academy:</h2>
-      </div>
+      <div class="modal-title"></div>
       <div class="modal-body">
+        <div>
+          <h4>UNIT <%= @unit_id %> : <%= @unit_title.capitalize %></h4>
+          <h4>PROJECT : <%= @project_title %></h4>
+          <%= image_tag(@featured_artist_image) %>
+          <div class='modal-synopsis'>
+            <h4>SYNOPSIS</h4>
+            <p><%= @synopsis %></p>
+          </div>
+        </div>
+        <h4>Please select your grade level:</h4>
         <div class="btn-group">
           <div class="btn btn-academy" data-level="lower">
             Lower Academy
