--- a/app/views/users/artroom.html.erb
+++ b/app/views/users/artroom.html.erb
@@ -164,12 +164,26 @@
     </section>
 
     <section>
+      <h1>most recent lesson</h1>
+        <div class="favorite-in-artroom">
+          <% @lesson = Lesson.find_by_id(current_user.last_lesson_id) %>
+           <% @lesson_project = Project.find_by_id(@lesson.project_id) %>
+          <a href="/<%= @lesson.level %>/projects/<%= @lesson_project.slug %>/lessons/<%= @lesson.slug %>">
+            <%= image_tag(@lesson.example_image, size: "100x100") %>
+            <p class="favorite-project-title"><%= @lesson.title %></p>
+            <p class="favorite-academy"><%= @lesson.level.capitalize %> Academy</p>
+          </a>
+        </div>
+    </section>
+
+    <section>
       <h1><span class="glyphicon glyphicon-star"  aria-hidden="true"></span>saved projects</h1>
       <% current_user.favorites.each do |favorite| %>
         <div class="favorite-in-artroom">
-          <a href="/lower/projects/<%= favorite.slug %>">
+          <a href="/<%= favorite.level %>/projects/<%= favorite.slug %>">
           <%= image_tag(favorite.project_set.project_image, size: "100x100") %>
           <p class="favorite-project-title"><%= favorite.title %></p>
+          <p class="favorite-academy"><%= favorite.level.capitalize %> Academy</p>
           </a>
         </div>
         <% end %>
