--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -16,21 +16,18 @@
 
   <div class="project-grid">
     <% @units.order(:order).each do |unit| %>
-      <% @unit_id = unit.id %>
-      <div><h2 id="<%= "#{unit.order}" %>"><%= "#{unit.full_title}" %></h2></div>
-      
-      <% @unit_title = unit.title %>
+      <div><h2 id="<%= "#{unit.order}" %>"><%= "#{unit.full_title}" %></h2></div>      
       <% unit.project_sets.published.each do |set| %>
-      <% @set_id = set.id %>
-      <% @set_title = set.title %>
-      <div class="project-grid-item" data-unit-full-title="<%= unit.full_title %>" data-project-title="<%= set.title %>"  data-project-featured-image="<%= Project.find_by_project_set_id(set.id).featured_artist_image %>" data-project-synopsis="<%= Project.find_by_project_set_id(set.id).synopsis %>" data-project-slug="<%= set.slug %>" id="<%= set.id %>">
+      <div class="project-grid-item" 
+        data-unit-full-title="<%= unit.full_title %>" 
+        data-project-title="<%= set.title %>"  
+        data-project-featured-image="<%= Project.find_by_project_set_id(set.id).featured_artist_image %>" 
+        data-project-synopsis="<%= Project.find_by_project_set_id(set.id).synopsis %>" 
+        data-project-slug="<%= set.slug %>" id="<%= set.id %>">
         <div class="project-grid-item-image" style="background-image: url(
           <%= set.project_image.url(:medium) %>)">
         </div>
         <div class="project-grid-item-title"><%= set.title %></div>
-        <% @project_title = set.title %>
-        <% @synopsis = Project.find_by_project_set_id(set.id).synopsis %>
-        <% @featured_artist_image = Project.find_by_project_set_id(set.id).featured_artist_image %>
       </div>
       <% end %>
     <% end %>
@@ -56,7 +53,7 @@
             <p id="project-synopsis-modal"></p>
           </div>
         </div>
-        <h4>Please select your grade level:</h4>
+        <h4 class="select-grade">Please select your grade level:</h4>
         <div class="btn-group">
           <div class="btn btn-academy" data-level="lower">
             Lower Academy
