added offline url for vimeo

--- a/app/assets/stylesheets/lessons.scss
+++ b/app/assets/stylesheets/lessons.scss
@@ -130,6 +130,19 @@
     margin-bottom: 3em;
   }
 
+  // .vimeo-player {
+  //   margin-bottom: 10px;
+  //   // padding-bottom: 20px;
+  //   // iframe {
+  //     // padding-bottom: 10px;
+  //   // }
+  // }
+
+  .vimeo-offline {
+    // font-style: italic;
+    color: #8DC5E6;
+  }
+
 }
 
 .insp-img-wrapper {
