--- a/app/views/admin/lessons/_form.html.erb
+++ b/app/views/admin/lessons/_form.html.erb
@@ -174,6 +174,11 @@
   </div>
 
   <div class="field">
+    <%= f.label :vimeo_offline_url %>
+    <%= f.text_field :vimeo_offline_url %>
+  </div>
+
+  <div class="field">
     <%= f.label :instructions %>
     <%= f.text_area :instructions, 'data-uk-htmleditor' => '{markdown:true}' %>
   </div>
