added video to about page

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,6 +1,8 @@
 <% content_for(:page_title) { ('About Us') } %>
 <% content_for(:hero_image) { image_tag 'heros/about.jpg' } %>
+
 <div class='about-wrapper'>
+<iframe src="https://player.vimeo.com/video/151472643" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <h2>Our Story</h2>
 <%= image_tag 'pages/about1.jpg', class: 'right-set' %>
 <p>Founder Tempest NeuCollins received an MFA from the School of Visual Arts in New York City. Through her varied teaching experience in private classes and charter school classrooms, she became frustrated that so much art education is incredibly costly and inefficient or overcrowded with little opportunity for differentiation. She became determined to find a way to offer an affordable, open-ended curriculum that would bring art education to more students.</p>
