--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -1,5 +1,12 @@
 .about-wrapper {
 
+ iframe {
+    width: 960px;
+    margin: 0 auto;
+    height: calc(960px / 1.78);
+    margin-bottom: 40px;
+  }
+
   p, h2 {
     width: 75%;
     margin-left: auto;
