--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -1,10 +1,10 @@
 .about-wrapper {
 
  iframe {
-    width: 960px;
-    margin: 0 auto;
-    height: calc(960px / 1.78);
-    margin-bottom: 40px;
+    width: 700px;
+    margin: 0 8em;
+    height: calc(700px / 1.78);
+    // margin-bottom: 40px;
   }
 
   p, h2 {
