--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -18,53 +18,86 @@
     <% @units.order(:order).each do |unit| %>
       <div><h2 id="<%= "#{unit.order}" %>"><%= "#{unit.full_title}" %></h2></div>      
       <% unit.project_sets.published.each do |set| %>
-      <div class="project-grid-item" 
+      <div class="project-grid-item"
         data-unit-full-title="<%= unit.full_title %>" 
-        data-project-title="<%= set.title %>"  
+        data-project-title="<%= set.title %>"
+        data-project-lower-id="<%= Project.find_by_project_set_id_and_level(set.id, 1).id %>"
+        data-project-upper-id="<%= Project.find_by_project_set_id_and_level(set.id, 0).id %>"
+        data-favorite-lower="<%= current_user.favorite_projects.exists?(project_id: Project.find_by_project_set_id_and_level(set.id, 1).id) %>"
+        data-favorite-upper="<%= current_user.favorite_projects.exists?(project_id: Project.find_by_project_set_id_and_level(set.id, 0).id) %>"
         data-project-featured-image="<%= Project.find_by_project_set_id(set.id).featured_artist_image %>" 
         data-project-synopsis="<%= Project.find_by_project_set_id(set.id).synopsis %>" 
         data-project-slug="<%= set.slug %>" id="<%= set.id %>">
         <div class="project-grid-item-image" style="background-image: url(
           <%= set.project_image.url(:medium) %>)">
-        </div>
+        </div>      
         <div class="project-grid-item-title"><%= set.title %></div>
       </div>
+
       <% end %>
     <% end %>
+
+
   </div>
 
+      <div class="modal" id="academy-select">
+        <div class="modal-content">
+          <div class="modal-close"></div>
+          <div class="modal-title"></div>
+          <div class="modal-body">
+            <div>
+              <h4 id="unit-full-title-modal"></h4>
+              <h4 id="project-title-modal"></h4>
+              <img src="#" id="project-featured-image-modal">
+              <div class='modal-synopsis'>
+                <h4>SYNOPSIS</h4>
+                <p id="project-synopsis-modal"></p>
+              </div>
+            </div>
+            <h4 class="select-grade">Please select your grade level:</h4>
+
+            <div class="btn-group">
+
+              <div class='modal-lower-buttons'>
+                <div class="btn btn-academy" data-level="lower">
+                  Lower Academy
+                  <div class="academy-info">Grades 1-2</div>
+                </div>
+
+                <% if current_user %>
+                  <div class="btn save-project">
+                      <a rel="nofollow" data-method="put" class="modal-favorite-star" id="modal-lower-favorite-star" href="#"><span></span> Save Project</a>
+                  </div>
+                <% end %>
+              </div>
+
+              <div class='modal-upper-buttons'>
+                <div class="btn btn-academy" data-level="upper">
+                  Upper Academy
+                  <div class="academy-info">Grades 3-5</div>
+                </div>
+
+                <% if current_user %>
+                  <div class="btn save-project">
+                      <a rel="nofollow" data-method="put" class="modal-favorite-star" id="modal-upper-favorite-star" href="#"><span></span> Save Project</a>
+                  </div>
+                <% end %>
+              </div>
+
+            </div>
+          
+          </div>
+        </div>
+      </div>
+
+
 </div>
+
+
 
 
   <%= render "shared/modal", id: "modal-units", title: "What are Units?", body: "You can do lessons in any order that you please. \n However, by following the units in order, students experience a scaffolded learning structure that gradually adds complexity without overwhelming them. \n By the end of the 2016 school year, there will be over a year’s worth of weekly, scaffolded art lessons. Project development is ongoing, and projects will continue to be be added to each unit so that educators can choose projects fitting into their specific classroom's learning objectives. \n Sign up to receive notifications of new projects by email." %>
 
 
-  <div class="modal" id="academy-select">
-    <div class="modal-content">
-      <div class="modal-close"></div>
-      <div class="modal-title"></div>
-      <div class="modal-body">
-        <div>
-          <h4 id="unit-full-title-modal"></h4>
-          <h4 id="project-title-modal"></h4>
-          <img src="#" id="project-featured-image-modal">
-          <div class='modal-synopsis'>
-            <h4>SYNOPSIS</h4>
-            <p id="project-synopsis-modal"></p>
-          </div>
-        </div>
-        <h4 class="select-grade">Please select your grade level:</h4>
-        <div class="btn-group">
-          <div class="btn btn-academy" data-level="lower">
-            Lower Academy
-            <div class="academy-info">Grades 1-2</div>
-          </div>
-          <div class="btn btn-academy" data-level="upper">
-            Upper Academy
-            <div class="academy-info">Grades 3-5</div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+
 <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us10.list-manage.com","uuid":"28ca6056cf1fcbb59340d2de6","lid":"434752e97b"}) })</script>
