minor style changes per Tempest's request

--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -182,9 +182,9 @@
   }
 
   iframe {
-    width: 80vw;
+    width: 960px;
     margin: 0 auto;
-    height: calc(80vw / 1.78);
+    height: calc(960px / 1.78);
   }
 
 }
