--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -11,6 +11,8 @@ $primary-green: #CCC92A;
 
 $warm-gray: #999;
 
+$darker-blue: #2986bc;
+
 $accent-black: #000000;
 $accent-gray: #DDDEE0;
 $accent-green: #31B79A;
