--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -22,7 +22,16 @@
 
   <hr />
 
-  <h1>Project Overview</h1>
+  <h1>Project Overview</span>
+    <% if current_user %>
+      <% if current_user.favorite_projects.exists?(project_id: @project.id) %>
+        <%= link_to (content_tag(:span, "", class: "favorite glyphicon glyphicon-star")), favorite_project_path(@project, type: "unfavorite"), method: :put %>
+      <% else %>
+        <%= link_to (content_tag(:span, "", class: "favorite glyphicon glyphicon-star-empty")), favorite_project_path(@project, type: "favorite"), method: :put %>
+      <% end %>
+    <% else %>
+      <span class="glyphicon glyphicon-star-empty" id="favorite_nonuser"></span>
+    <% end %></h1>
   <div>
     <h2 id='project-synopsis'>synopsis</h2>
     <p><%= @project.synopsis %></p>
@@ -41,7 +50,7 @@
     <h2 id='project-materials'>materials</h2>
     <p><%= @project.materials %></p>
     <div class="project-indent">
-      <p>*suggestion: <%= @project.materials_suggestion %></p>
+      <small>*suggestion: <%= @project.materials_suggestion %></small>
     </div>
 
     <h2 id='project-books-media'>books/media</h2>
@@ -82,9 +91,10 @@
         <p class="pdf-indent"><%= link_to @project.fifth_photocopy_file_name, @project.fifth_photocopy.url %></p>
       <% end %>
       <% if @project.photocopy_copyright.present? %>
-        <p><%= @project.photocopy_copyright %></p>
+        <small><%= @project.photocopy_copyright %></small>
+        <br>
       <% end %>
-      <p>© info: Doodles Academy presents both public domain artworks and works that are protected by copyright in their videos and lessons. The latter are used in accordance with fair use principle, as the images are only being used for educational purposes. If you are the copyright holder of the work of art used for Doodles-Academy.org and do not agree that the use of your image is a fair use, please contact us by email.</p>
+      <small>© info: Doodles Academy presents both public domain artworks and works that are protected by copyright in their videos and lessons. The latter are used in accordance with fair use principle, as the images are only being used for educational purposes. If you are the copyright holder of the work of art used for Doodles-Academy.org and do not agree that the use of your image is a fair use, please contact us by email.</small>
     </div>
   </p>
   <hr />
@@ -137,20 +147,11 @@
       <h2 id='project-cross-curricular'>cross curricular</h2>
       <p><%= @project.cross_curricular %></p>
 
-      <% if @academy == :lower %>
-        <h2 id='project-engage-ny'>Core Knowledge</h2>
-        <% if @project.engage_ny.present? %>
-          <p><%= @project.engage_ny %></p>
-        <% else %>
-          <p>N/A</p>
-        <% end %>
+      <h2 id='project-engage-ny'>engage NY</h2>
+      <% if @project.engage_ny.present? %>
+        <p><%= @project.engage_ny %></p>
       <% else %>
-        <h2 id='project-engage-ny'>Expeditionary Learning</h2>
-        <% if @project.engage_ny.present? %>
-          <p><%= @project.engage_ny %></p>
-        <% else %>
-          <p>N/A</p>
-        <% end %>
+        <p>N/A</p>
       <% end %>
 
       <h2 id='project-next-gen-sci'>next generation science</h2>
@@ -164,4 +165,33 @@
   </div>
 
 </div>
-<script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us10.list-manage.com","uuid":"28ca6056cf1fcbb59340d2de6","lid":"434752e97b"}) })</script>
+
+<div class="modal" id="projectFavoriteModal">
+  <div class="modal-content">
+    <div class="modal-close"></div>
+    <div class="modal-title">
+      <h1>Sign in to access this feature!</h1>
+    </div>
+    <div class="modal-body">
+    <h2><a href="/users/sign_in">Sign in</a> or <a href="/users/sign_up">sign up</a> with us to favorite<span class="glyphicon glyphicon-star"></span> a project!</h2>
+    </div>
+  </div>
+</div>
+
+<script>
+  var $modal, $modal_close, toggleModal;
+
+  $('#favorite_nonuser').on('click', function(){
+    $modal = $('#projectFavoriteModal');
+    $modal_close = $modal.find('.modal-close');
+    toggleModal = function(toggle) {
+      return $modal.toggleClass("is-active", toggle);
+    };
+    toggleModal(true);
+    $modal_close.on('click', function() {
+      return toggleModal(false);
+    });
+  });
+    
+</script>
+
