fixing image size on modal

--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -210,6 +210,15 @@
         text-align: left;
       }
     }
+
+    #project-featured-image-modal {
+      max-height: 150px;
+      width: auto;
+    }
+
+    .select-grade {
+      margin-top: 75px;
+    }
   }
 }
 
